--- a/src/style/index.css
+++ b/src/style/index.css
@@ -4,11 +4,6 @@
 */
 
 /*
-    progressive design
-        use spans
-        mobile: 4 columns, 412px break point, 16px gutters & margins
-        tablet: 6 columns, 912px break point, 32px gutters & margins
-        desktop: 12 columns, 1280px break point, 32px gutters & margins
     layout
         church
             members/users
@@ -29,13 +24,58 @@
 */
 
 #wrapper {
+    /* define wrapper to be of type grid */
     display: grid;
     /* define the wrapper height to be size of view */
     height: 100vh;
-    /* create 3 equal-sized columns for wrapper */
-    grid-template-columns: repeat(3, 1fr);
-    /* create 5 equal-sized rows for wrapper */
-    grid-template-rows: repeat(5, 1fr);
-    /* define gutter space between cells to be 16px */
-    gap: 16px;
+}
+
+/* test code */
+#wrapper>* {
+    border: 1px dotted black;
+}
+
+/* anomalous devices */
+@media (max-width: 359px) {
+    #wrapper {
+        /* create 1 column for wrapper */
+        grid-template-columns: 1fr;
+        /* create 5 equal-sized rows for wrapper */
+        grid-template-rows: repeat(5, 1fr);
+        /* define gutter space between cells to be 12px */
+        gap: 12px;
+    }
+}
+
+/* mobile device */
+@media (min-width: 360px) {
+    #wrapper {
+        /* create 1 column for wrapper */
+        grid-template-columns: 1fr;
+        /* create 5 equal-sized rows for wrapper */
+        grid-template-rows: repeat(5, 1fr);
+        /* define gutter space between cells to be 16px */
+        gap: 16px;
+    }
+}
+
+/* tablet */
+@media (min-width: 768px) {
+    #wrapper {
+        /* create 3 equal-sized columns for wrapper */
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(5, 1fr);
+        /* define gutter space between cells to be 32px */
+        gap: 32px;
+    }
+}
+
+/* desktop */
+@media (min-width: 1280px) {
+    #wrapper {
+        /* create 6 equal-sized columns for wrapper */
+        grid-template-columns: repeat(6, 1fr);
+        grid-template-rows: repeat(5, 1fr);
+        gap: 32px;
+    }
 }
